cloudformation/staging/cluster/cloudformation.staging.eks.sg.yml
AWSTemplateFormatVersion: "2010-09-09"

Description: >-
  All Security Groups for Turbine.

Parameters:
  VPCID:
    Type: AWS::EC2::VPC::Id
  VPCCIDR:
    Type: String
    AllowedPattern: >-
      ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$
  OpenVPNPortNumber:
    Type: Number

Resources:

  EfsAccessSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: >-
        Security Rules with permissions for the shared filesystem across Airflow
        instances.
      SecurityGroupIngress:
        - CidrIp: !Ref VPCCIDR
          IpProtocol: TCP
          FromPort: 2049
          ToPort: 2049
      VpcId: !Ref VPCID
      Tags:
        - Key: Name
          Value: !Sub '${AWS::StackName}-access'

  DbConnectionSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Rules with permissions for database connections for Airflow.
      SecurityGroupIngress:
        - CidrIp: !Ref VPCCIDR
          IpProtocol: TCP
          FromPort: 5432
          ToPort: 5432
      VpcId: !Ref VPCID
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-connection

  OpenVPNInstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SG for OpenVPN EC2 Instance
      VpcId: !Ref VPCID
      SecurityGroupIngress:
        - CidrIp: !Ref VPCCIDR
          IpProtocol: udp
          FromPort: !Ref OpenVPNPortNumber
          ToPort: !Ref OpenVPNPortNumber

          # UNCOMMENT FOR TROUBLESHOOTING ONLY!
          # This will allow access from public IP
          # - IpProtocol: tcp
          #   FromPort: 22
          #   ToPort: 22
          #   CidrIp: !Ref LocalConnectionIP

Outputs:
  EfsAccessSecurityGroup:
    Value: !Ref EfsAccessSG
  DbConnectionSecurityGroup:
    Value: !Ref DbConnectionSG
  VpnAccessSecurityGroup:
    Value: !Ref OpenVPNInstanceSG
